# luser-backend

./: Cargo.toml  Dockerfile.api  LICENSE  README.md  docker-compose.yml  prometheus.yml
.cargo/: config.toml
crates/luser-admin/: Cargo.toml
crates/luser-api/: Cargo.toml
crates/luser-api/src/: main.rs
crates/luser-cloud/: Cargo.toml
crates/luser-cloud-aliyun/: Cargo.toml
crates/luser-cloud-tencent/: Cargo.toml
crates/luser-common/: Cargo.toml
crates/luser-common/src/: constants.rs  error.rs  lib.rs  pagination.rs  types.rs  utils.rs  validation.rs
crates/luser-common/src/enums/: mod.rs  order.rs  payment.rs  user.rs  video.rs
crates/luser-common/src/utils/: crypto.rs  file.rs  logger.rs  math.rs  mod.rs  string.rs  time.rs  url.rs  validation.rs
crates/luser-config/: Cargo.toml  README.md
crates/luser-config/config/: default.toml
crates/luser-config/src/: config.rs  constants.rs  database.rs  encryption.rs  error.rs  init.rs  lib.rs  loader.rs  manager.rs  merger.rs  tests.rs  validator.rs  watcher.rs
crates/luser-core/: Cargo.toml
crates/luser-core/src/: lib.rs
crates/luser-core/src/cache/: mod.rs
crates/luser-db/: Cargo.toml  READEM.md
crates/luser-db/migrations/: 001_initial_schema.sql
crates/luser-db/src/: db.rs  global.rs  lib.rs  model.rs  pool.rs  query.rs  transaction.rs
crates/luser-wapay/: Cargo.toml
nginx/: nginx.conf
nginx/conf.d/: admin.conf  api.conf
scripts/: backup-database.sh  init-prod.sh  monitor-services.sh  run-migrations.sh
