[workspace]
members = [
    "crates/luser-admin",
    "crates/luser-api",
    "crates/luser-cloud",
    "crates/luser-cloud-aliyun",
    "crates/luser-cloud-tencent",
    "crates/luser-common",
    "crates/luser-config",
    "crates/luser-core",
    "crates/luser-db",
    "crates/luser-wapay",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full", "fs", "rt", "macros", "sync", "time"] }
axum = { version = "0.8", features = ["macros", "ws"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

async-trait = "0.1"

sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json" ] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "v7", "serde"] }
bigdecimal = "0.2"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
validator = { version = "0.20", features = ["derive"] }
jsonwebtoken = "9.2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }


base64 = "0.22"
hex = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.9"
argon2 = "0.5"

aes-gcm = "0.10"
ring = "0.17"
url = "2.5"

percent-encoding = "2.3"
parking_lot = "0.12"
itertools = "0.14"

lazy_static = "1.5"

regex = "1.12"
semver = "1.0"
blake3 = "1.8"

utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid", "openapi_extensions"] }
utoipa-swagger-ui = "9.0"

opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry-semantic-conventions = "0.31"

prometheus = "0.14"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

bincode = "2.0"
crossbeam-channel = "0.5"
rayon = "1.11"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
codegen-units = 1