[package]
name = "luser-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true}
tokio = { workspace = true}
serde =  { workspace = true}
anyhow =  { workspace = true}
thiserror = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
chrono = { workspace = true}
luser-core = {path = "../luser-core"}
luser-config ={ path = "../luser-config"}