[package]
name = "luser-common"
version = "0.1.0"
edition = "2024"
description = "Luser平台公共类型和工具库"

[dependencies]
luser-config = { path = "../luser-config" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber= "0.3"
axum = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
redis = { workspace = true }

base64 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
sqlx =  { workspace = true }
parking_lot = { workspace = true }
lazy_static = { workspace = true }
reqwest =  { workspace = true }
argon2 = {workspace = true}
aes-gcm =  { workspace = true }
sha2= {workspace = true}
ring =  { workspace = true }
bigdecimal =  { workspace = true }
jsonwebtoken = { workspace = true }
percent-encoding = "2.3"
rand = "0.9"
num-traits = "0.2"
num-derive = "0.4"
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.18"