[package]
name = "luser-core"
version = "0.1.0"
edition = "2024"

[dependencies]
luser-config = {path = "../luser-config"}
tokio = { workspace = true}
serde =  { workspace = true}
serde_json =  { workspace = true}

anyhow =  { workspace = true}
thiserror = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
async-trait = { workspace = true}

chrono = { workspace = true}
validator =  { workspace = true}
sqlx ={ workspace = true }

redis = { workspace = true }
axum = {workspace = true}
once_cell = "1.0"